# grillcheese-alpha-0.0.1

./: .gitattributes  .gitignore  CAPSULE_MEMORY_README.md  EMBEDDING_UPGRADE.md  EMPIRICAL_VALIDATION_REPORT.md  GPU_FIXES.md  GPU_OPTIMIZATION_NOTES.md  INFRASTRUCTURE.md  QUICK_START_TRAINING.md  README.md  TRAINING_DATASETS.md  benchmark.py  benchmark_faiss_performance.py  ca3_memory_store.py  cli.py  compute.py  config.py  convert_embedder_model.py  dev_auth.py  download_datasets.py  download_embedding_model.py  download_model.py  empirical_tests.py  hilbert_routing.py  identity.py  integration_example.py  main.py  memory_store.py  model.py  model_gguf.py  model_onnx.py  pyproject.toml  requirements_multimodal.txt  test_components.py  test_faiss_crossover.py  test_gguf.py  test_integration.py  test_vulkan_embedder.py  tokenizer.py  train_from_datasets.py  (+6 more)
brain/: __init__.py  amygdala.py  basal_ganglia.py  cns.py  data_loader.py  endocrine.py  gpu_brain.py  limbic_system.py  specialist.py  temporal_indexer.py  thalamus.py  unified_brain.py
brain_state/: experience_embeddings.npy
cli/: __init__.py  cli.py  cli_root.py
common/: io.py  stats.py
docs/: DEVELOPER_MODE.md  FEATURE_MAP.md  PRODUCT.md  PROTECTED_MODES_REFERENCE.md  README_CLI.md  README_GGUF.md  README_WINDOWS.md  SHADER_REFERENCE.md  SHADER_TEST_STATUS.md  TEACH_MODE.md
learning/: __init__.py  continuous_learner.py  embedder_config.py  events.py  knowledge_distillation.py  multilingual_utils.py  multimodal_encoder.py  multimodal_encoder_updated.py  multimodal_memory_store.py  stdp_learner.py  vulkan_embedder.py
learning_state/: learner_stats.json  processed_hashes.json  stdp_state.json
memory/: CAPSULE_INTEGRATION.md  __init__.py  ca3_memory.py  capsule_encoder.py  capsule_memory.py  capsule_store.py  dentate_gyrus.py  identity_loader.py
modules/: AUTO_LOADING.md  README.md  STRUCTURE.md  __init__.py  base.py  loader.py  modules_config.json  registry.py  tools.py
(+174 files in other folders)
