[project]
name = "grillcheese-amd-mvp"
version = "0.1.0"
description = "Vulkan AI System for local, business and enterprise usage focusing on low power consumption, low footprint and afforable inference / training."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.12.0",
    "fastapi>=0.127.0",
    "hf-xet>=1.2.0",
    "librosa>=0.11.0",
    "lingua>=4.15.0",
    "lingua-language-detector>=2.1.1",
    "llama-cpp-python>=0.3.16",
    "numpy<2",
    "onnx>=1.19.0",
    "onnxruntime>=1.23.2",
    "pillow>=12.0.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-timeout>=2.4.0",
    "scikit-learn>=1.3.0",
    "sentence-transformers>=2.2.0",
    "soundfile>=0.13.1",
    "torch>=2.6.0",
    "torchvision>=0.17.0",
    "transformers>=4.57.3",
    "uvicorn>=0.40.0",
    "vulkan>=1.3.275.1",
    "websockets>=15.0.1",
]



[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[project.scripts]
grilled = "cli:cli"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
